# aideck-esp-firmware

./: program_esp.sh  run_make.sh  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  aideck_esp_main.c  get_started.c  router.c  router.h  wifi.c  wifi.h
