idf_component_register(SRCS "./get_started.c"
                            "wifi.c"
                            "test.c"
                            "com.c"
                            "router.c"
                            "uart_transport.c"
                            "led.c"
                            "spi_transport.c"
                            "led.c"
                            "esp_transport.c"
                            "cpx.c"
                            "system.c"
                            "discovery.c"
                        INCLUDE_DIRS ""
                        REQUIRES mcommon mconfig mwifi mlink)
